delete total_tasks in config.py

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ runtime/log
 runtime/temp
 
 public/images
+
+.ipynb_checkpoints/*
+*/.ipynb_checkpoints/*
+*/*/*/.ipynb_checkpoints/*
+*/*/*/*/.ipynb_checkpoints/*
